# MEDOED

./: .gitignore  README.md  docker-compose.yml
src/agent/: .dockerignore  AGENTS.md  CMakeLists.txt  Dockerfile
src/agent/include/: event_collector.h  heartbeat.h  logger.h
src/agent/src/: event_collector.cpp  heartbeat.cpp  logger.cpp  main.cpp  openaudit.cpp
src/agent/tests/: event_collector_test.cpp  heartbeat_test.cpp  json_test.cpp  logger_test.cpp  main_test.cpp  system_test.cpp  test_runner.h
src/backend/: Dockerfile  config.json  go.mod  go.sum  main.go
src/backend/handlers/: auth.go  handlers.go  handlers_test.go  rules.go  ui.go
src/backend/migrations/: 01_schema.sql
src/backend/models/: models.go  models_test.go
src/backend/templates/: agents.html  alerts.html  base.html  dashboard.html  events.html
